<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sub11"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/choosingcircle" />

    <ImageView
        android:id="@+id/sub12"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/sub_dis2"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/choosingcircle" />

    <ImageView
        android:id="@+id/sub_dis1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp"
        android:layout_marginStart="26dp"
        app:srcCompat="@drawable/choosingcircle" />

    <ImageView
        android:id="@+id/sub_dis2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:layout_toEndOf="@+id/sub11"
        app:srcCompat="@drawable/choosingcircle" />

    <TextView
        android:id="@+id/att_sub11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sub11"
        android:layout_alignLeft="@+id/sub11"
        android:layout_alignRight="@+id/sub11"
        android:layout_alignTop="@+id/sub11"
        android:gravity="center"
        android:text="@string/sub11"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/att_sub12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sub12"
        android:layout_alignLeft="@+id/sub12"
        android:layout_alignRight="@+id/sub12"
        android:layout_alignTop="@+id/sub12"
        android:gravity="center"
        android:text="@string/sub12"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/att_dis1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sub_dis1"
        android:layout_alignLeft="@+id/sub_dis1"
        android:layout_alignRight="@+id/sub_dis1"
        android:layout_alignTop="@+id/sub_dis1"
        android:gravity="center"
        android:text="@string/sub_dis1"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/att_dis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sub_dis2"
        android:layout_alignLeft="@+id/sub_dis2"
        android:layout_alignRight="@+id/sub_dis2"
        android:layout_alignTop="@+id/sub_dis2"
        android:gravity="center"
        android:text="@string/sub_dis2"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />


</RelativeLayout>